RESOLVED FIXED310116
[JSC] Nested `using` blocks crash
https://bugs.webkit.org/show_bug.cgi?id=310116
Summary [JSC] Nested `using` blocks crash
Shu-yu Guo
Reported 2026-03-17 11:05:41 PDT
rdar://172745563 Repro under ASAN: ``` eval( "{using a0=null;" + "{using a1=null;".repeat(19) + "0;" + "}".repeat(20) ); ```
Attachments
Sosuke Suzuki
Comment 1 2026-03-17 17:15:42 PDT
EWS
Comment 2 2026-03-17 23:16:37 PDT
Committed 309457@main (57a48c393902): <https://commits.webkit.org/309457@main> Reviewed commits have been landed. Closing PR #60820 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.